--- a/overlay/packages/apps/overlays/NoCutoutOverlay/res/values/config.xml
+++ b/overlay/packages/apps/overlays/NoCutoutOverlay/res/values/config.xml
@@ -28,5 +28,11 @@
     <!-- Height of the status bar -->
     <dimen name="status_bar_height_portrait">28dp</dimen>
     <dimen name="status_bar_height_landscape">28dp</dimen>
+    <dimen name="rounded_corner_radius_top">60px</dimen>
+
+    <!-- Max visible notification icons -->
+    <integer name="config_maxVisibleNotificationIcons">6</integer>
+    <integer name="config_maxVisibleNotificationIconsWhenDark">7</integer>
+
 
 </resources>
